--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>
         <div class="box">
             <i class="fas fa-hotel fa-3x"></i>
-            <h3>Great Location</h3>
+            <h3>Great Job</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="box">
